# Wizard-Game-using-SDL2-and-TMX

./: '  .main.cpp.swp  CMakeLists.txt  Kinematics.cpp  Kinematics.hpp  Makefile  README.md  \  ]  a.out  bounding_box.cpp  bounding_box.hpp  camera.cpp  camera.hpp  collisions.cpp  collisions.hpp  dungeon.tsx  enemies.tsx  enemy.cpp  enemy.hpp  enemy1.tsx  enemyPathing.cpp  enemyPathing.hpp  globals.cpp  globals.hpp  gmon.out  gravity.cpp  gravity.hpp  image_loader.cpp  image_loader.hpp  init.cpp  init.hpp  lightSystem.cpp  lightSystem.hpp  lol.tsx  main.cpp  make_portable.sh  map.cpp  map.hpp  mapglobal.cpp  (+26 more)
.git_corrupted/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git_corrupted/logs/: HEAD
.git_corrupted/logs/refs/heads/: improve-the-collisions  improve_the_kinematics  main
.git_corrupted/logs/refs/remotes/origin/: HEAD  improve_the_kinematics  main
.git_corrupted/objects/pack/: pack-b75822da315186f512578c9cd3de72eb79f4adad.idx  pack-b75822da315186f512578c9cd3de72eb79f4adad.pack  pack-b75822da315186f512578c9cd3de72eb79f4adad.rev
.git_corrupted/refs/heads/: improve-the-collisions  improve_the_kinematics
.git_corrupted/refs/remotes/origin/: main
levels/: 1.tmx  2.tmx  3.tmx  4.tmx  5.tmx  5.ymx  6.tmx  7.tmx  8.tmx  9.tmx  tileset.tsx
sprites/tiles/0x72_DungeonTilesetII_v1.7/frames/: untitle5d.pxo  untitled.json  untitled.pxo  wiz2.pxo  wizzard_m_run_anim_f3.png.pxo
sprites/wizard/: untitled.json
